# fcfwf

./: pyproject.toml
fcfwf/: __init__.py
tests/: test_fcfwf.py
